--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.24.0",
-    "socket.io": "^2.4.0",
-    "cors": "^2.8.5"
+    "socket.io": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
