--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "mysql": "^2.18.1",
     "socket.io": "^2.4.0"
   },
   "devDependencies": {
